--- a/src/MauiTemplatesCLI/MauiAppFS/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/MauiAppFS/Directory.Packages.props
@@ -6,7 +6,7 @@
         <!--#if (Nightly)-->
         <MauiVersion>10.0.20-ci.net10.25563.5</MauiVersion>
         <!--#else-->
-        <MauiVersion>10.0.10</MauiVersion>
+        <MauiVersion>10.0.11</MauiVersion>
         <!--#endif-->
         <!--#elif (Net9)-->
         <MauiVersion>9.0.120</MauiVersion>
@@ -15,24 +15,10 @@
         <!--#endif-->
         <!--#else-->
         <ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
-        <!--#if (Net10)-->
         <!--#if (Nightly)-->
-        <MauiVersion>10.*-*</MauiVersion>
+        <MauiVersion>PKG_VERSION-*</MauiVersion>
         <!--#else-->
-        <MauiVersion>10.*</MauiVersion>
-        <!--#endif-->
-        <!--#elif (Net9)-->
-        <!--#if (Nightly)-->
-        <MauiVersion>9.*-*</MauiVersion>
-        <!--#else-->
-        <MauiVersion>9.*</MauiVersion>
-        <!--#endif-->
-        <!--#elif (Net8)-->
-        <!--#if (Nightly)-->
-        <MauiVersion>8.*-*</MauiVersion>
-        <!--#else-->
-        <MauiVersion>8.*</MauiVersion>
-        <!--#endif-->
+        <MauiVersion>PKG_VERSION</MauiVersion>
         <!--#endif-->
         <!--#endif-->
     </PropertyGroup>
@@ -44,12 +30,12 @@
         <PackageVersion Include="FSharp.Maui.WinUICompat" Version="1.1.0" />
         <!--#endif-->
         <!--#if (Hybrid)-->
-        <!--#if (Net10)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="10.0.0" />
+        <!--#if (Net9)-->
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.11" />
         <!--#elif (Net8)-->
         <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.22" />
         <!--#else-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.11" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="10.0.0" />
         <!--#endif-->
         <!--#endif-->
         <PackageVersion Include="Fabulous" Version="2.4.1" />
@@ -57,48 +43,52 @@
         <!--#if (Hybrid)-->
         <PackageVersion Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <!--#endif-->
-        <!--#if (Net10)-->
-        <PackageVersion Include="FSharp.Core" Version="10.0.100" />
-        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0" Condition="'$(Configuration)' == 'Debug'" />
-        <!--#elif (Net9)-->
+        <!--#if (Net9)-->
         <PackageVersion Include="FSharp.Core" Version="9.0.303" />
         <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="9.0.11" Condition="'$(Configuration)' == 'Debug'" />
-        <!--#else-->
+        <!--#elif (Net8)-->
         <PackageVersion Include="FSharp.Core" Version="8.0.403" />
         <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" Condition="'$(Configuration)' == 'Debug'" />
+        <!--#else-->
+        <PackageVersion Include="FSharp.Core" Version="10.0.100" />
+        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0" Condition="'$(Configuration)' == 'Debug'" />
         <!--#endif-->
         <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <!--#if (Net8)-->
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddToolkit)-->
-        <!--#if (Net10OrLater)-->
-        <PackageVersion Include="CommunityToolkit.Maui" Version="13.0.0" />
-        <!--#elif (Net9)-->
+        <!--#if (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui" Version="12.3.0" />
-        <!--#else-->
+        <!--#elif (Net8)-->
         <PackageVersion Include="CommunityToolkit.Maui" Version="9.1.1" />
+        <!--#else-->
+        <PackageVersion Include="CommunityToolkit.Maui" Version="13.0.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddSyncfusionToolkit)-->
+        <!--#if (Net9OrLater)-->
+        <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.8" />
+        <!--#else-->
         <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.7" />
         <!--#endif-->
+        <!--#endif-->
         <!--#if (AddMarkup)-->
-        <!--#if (Net10OrLater)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="7.0.0" />
-        <!--#elif (Net9)-->
+        <!--#if (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="6.0.1" />
-        <!--#else-->
+        <!--#elif (Net8)-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="4.2.0" />
+        <!--#else-->
+        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="7.0.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
-        <!--#if (Net10OrLater)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.1.0" />
-        <!--#elif (Net9)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.1.0" />
-        <!--#else-->
+        <!--#if (Net9)-->
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.2.0" />
+        <!--#elif (Net8)-->
         <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.6.0" />
+        <!--#else-->
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="5.0.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMedia)-->
