--- a/src/MauiTemplatesCLI/MauiAppFS/Platforms/Android/AndroidManifest.xml
+++ b/src/MauiTemplatesCLI/MauiAppFS/Platforms/Android/AndroidManifest.xml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--#if (Net10OrLater)-->
+    <!--#if (Net9)-->
     <!--#if (Hybrid)-->
-    <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="36" />
+    <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="35" />
     <!--#else-->
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="36" />
+    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="35" />
     <!--#endif-->
     <!--#elif (Net8)-->
     <!--#if (Hybrid)-->
@@ -14,9 +14,9 @@
     <!--#endif-->
     <!--#else-->
     <!--#if (Hybrid)-->
-    <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="35" />
+    <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="36" />
     <!--#else-->
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="35" />
+    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="36" />
     <!--#endif-->
     <!--#endif-->
 	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true"></application>
