--- a/src/MauiTemplatesCLI/MauiClassLib/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/MauiClassLib/Directory.Packages.props
@@ -6,7 +6,7 @@
         <!--#if (Nightly)-->
         <MauiVersion>10.0.20-ci.net10.25563.5</MauiVersion>
         <!--#else-->
-        <MauiVersion>10.0.10</MauiVersion>
+        <MauiVersion>10.0.11</MauiVersion>
         <!--#endif-->
         <!--#elif (Net9)-->
         <MauiVersion>9.0.120</MauiVersion>
@@ -15,24 +15,10 @@
         <!--#endif-->
         <!--#else-->
         <ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
-        <!--#if (Net10)-->
         <!--#if (Nightly)-->
-        <MauiVersion>10.*-*</MauiVersion>
+        <MauiVersion>PKG_VERSION-*</MauiVersion>
         <!--#else-->
-        <MauiVersion>10.*</MauiVersion>
-        <!--#endif-->
-        <!--#elif (Net9)-->
-        <!--#if (Nightly)-->
-        <MauiVersion>9.*-*</MauiVersion>
-        <!--#else-->
-        <MauiVersion>9.*</MauiVersion>
-        <!--#endif-->
-        <!--#elif (Net8)-->
-        <!--#if (Nightly)-->
-        <MauiVersion>8.*-*</MauiVersion>
-        <!--#else-->
-        <MauiVersion>8.*</MauiVersion>
-        <!--#endif-->
+        <MauiVersion>PKG_VERSION</MauiVersion>
         <!--#endif-->
         <!--#endif-->
     </PropertyGroup>
@@ -53,53 +39,57 @@
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddToolkit)-->
-        <!--#if (Net10OrLater)-->
-        <PackageVersion Include="CommunityToolkit.Maui" Version="13.0.0" />
-        <!--#elif (Net9)-->
+        <!--#if (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui" Version="12.3.0" />
-        <!--#else-->
+        <!--#elif (Net8)-->
         <PackageVersion Include="CommunityToolkit.Maui" Version="9.1.1" />
+        <!--#else-->
+        <PackageVersion Include="CommunityToolkit.Maui" Version="13.0.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddSyncfusionToolkit)-->
+        <!--#if (Net9OrLater)-->
+        <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.8" />
+        <!--#else-->
         <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.7" />
         <!--#endif-->
+        <!--#endif-->
         <!--#if (AddMarkup)-->
-        <!--#if (Net10OrLater)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="7.0.0" />
-        <!--#elif (Net9)-->
+        <!--#if (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="6.0.1" />
-        <!--#else-->
+        <!--#elif (Net8)-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="4.2.0" />
+        <!--#else-->
+        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="7.0.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddCamera)-->
-        <!--#if (Net10OrLater)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Camera" Version="5.0.0" />
-        <!--#elif (Net9)-->
+        <!--#if (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui.Camera" Version="4.0.0" />
-        <!--#else-->
+        <!--#elif (Net8)-->
         <PackageVersion Include="CommunityToolkit.Maui.Camera" Version="1.0.5" />
+        <!--#else-->
+        <PackageVersion Include="CommunityToolkit.Maui.Camera" Version="5.0.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMedia)-->
-        <!--#if (Net10OrLater)-->
-        <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="7.0.0" />
-        <!--#elif (Net9)-->
+        <!--#if (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="6.1.3" />
-        <!--#else-->
+        <!--#elif (Net8)-->
         <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="4.1.2" />
+        <!--#else-->
+        <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="7.0.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMaps)-->
         <PackageVersion Include="Microsoft.Maui.Controls.Maps" Version="$(MauiVersion)" />
         <!--#if (AllPlatforms || IsWindows)-->
-        <!--#if (Net10OrLater)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="4.0.0" />
-        <!--#elif (Net9)-->
+        <!--#if (Net9)-->
         <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="3.0.3" />
-        <!--#else-->
+        <!--#elif (Net8)-->
         <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="2.0.4" />
+        <!--#else-->
+        <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="4.0.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#endif-->
@@ -107,12 +97,12 @@
         <PackageVersion Include="Microsoft.Maui.Controls.Foldable" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
-        <!--#if (Net10OrLater)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.1.0" />
-        <!--#elif (Net9)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.1.0" />
-        <!--#else-->
+        <!--#if (Net9)-->
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.2.0" />
+        <!--#elif (Net8)-->
         <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.6.0" />
+        <!--#else-->
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="5.0.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#endif-->
